Tue Dec  5 10:01:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lynxos.h:
          Improved LynxOS 4.2 support

Mon Dec  4 23:13:12 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Gestalt.cpp (init_i):

          Fixed bug#2735 and eliminated a potential memory leak of the
          list of already processed static services. The failure scenario
          is based on a case where static initializers register a bunch of
          service objects and then later the gestalt::open() is called. At
          that point, the abovementioned list is reinitialized and its
          contents was lost. See also the other failure scenario
          (bug#2701) for which a fix was put in on Nov 9 2006.

Mon Dec  4 18:00:16 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added a regression test for bug#2612

Mon Dec  4 15:42:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config:
          Moved TAO base projects to $TAO_ROOT/MPC/config

Mon Dec  4 13:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/MPC.cfg:
          Set includes so that TAO and CIAO base projects could be
          under TAO_ROOT and CIAO_ROOT

        * bin/MakeProjectCreator/config/ciao_client_dnc.mpb:
        * bin/MakeProjectCreator/config/ciao_component_dnc.mpb:
        * bin/MakeProjectCreator/config/ciao_config_handlers.mpb:
        * bin/MakeProjectCreator/config/ciao_config_handlers_base.mpb:
        * bin/MakeProjectCreator/config/ciao_container_dnc.mpb:
        * bin/MakeProjectCreator/config/ciao_deployment_stub.mpb:
        * bin/MakeProjectCreator/config/ciao_deployment_svnt.mpb:
        * bin/MakeProjectCreator/config/ciao_domainapplicationmanager_dnc.mpb:
        * bin/MakeProjectCreator/config/ciao_events_base_dnc.mpb:
        * bin/MakeProjectCreator/config/ciao_events_dnc.mpb: