@@ -25,6 +25,12 @@
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+#if ((36300 <= __HP_aCC) && (__HP_aCC <= 37300))
+// Due to a bug in the aCC 3.xx compiler need to define the ACE_String_Base
+// template before we can typedef ACE_CString
+# include "ace/String_Base.h"
+#endif /* __HP_aCC */
+
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
 template <class CHAR> class ACE_String_Base;  // Forward declaration.
